--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,13 @@ jobs:
           chmod 600 ~/.ssh/id_rsa
           ssh-keyscan -H 13.60.41.254 >> ~/.ssh/known_hosts  # EC2 Public IP
 
-      # Step 3: Deploy to EC2 (Pull code, install dependencies, migrate, collectstatic, restart services)
+      # Step 3: Set up ssh-agent (optional but recommended for handling private keys)
+      - name: Set up ssh-agent
+        run: |
+          eval "$(ssh-agent -s)"
+          ssh-add ~/.ssh/id_rsa
+
+      # Step 4: Deploy to EC2 (Pull code, install dependencies, migrate, collectstatic, restart services)
       - name: Deploy to EC2
         run: |
           ssh -i ~/.ssh/id_rsa ubuntu@13.60.41.254 << 'EOF'
@@ -51,6 +57,6 @@ jobs:
             sudo systemctl restart nginx
           EOF
 
-      # Step 4: Notify of successful deployment (Optional)
+      # Step 5: Notify of successful deployment (Optional)
       - name: Notify Success
         run: echo "Deployment Successful!"
