--- a/requirements.txt
+++ b/requirements.txt
@@ -6,12 +6,17 @@ click==8.1.8
 click-didyoumean==0.3.1
 click-plugins==1.1.1
 click-repl==0.3.0
+cron-descriptor==1.4.5
 Django==5.1.2
+django-celery-beat==2.7.0
+django-timezone-field==7.1
+django_celery_results==2.6.0
 djangorestframework==3.15.2
 kombu==5.5.2
 prompt_toolkit==3.0.50
 psycopg2==2.9.10
 psycopg2-binary==2.9.10
+python-crontab==3.2.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 redis==5.2.1
